# library_project

./: .gitignore  CMakeLists.txt  file.cpp  run.sh  test.cpp
Model/: CMakeLists.txt  database.db  file.sql
Model/DatabaseConnection/: CMakeLists.txt  dbconnect.cpp  dbconnect.hpp
Model/inc/: Document.hpp  Membre.hpp
Model/src/: Document.cpp  Membre.cpp
View/: CMakeLists.txt  main.cpp  run.sh
View/inc/: aside.hpp  dashboard.hpp  frame.hpp  section.hpp
View/src/: aside.cpp  dashboard.cpp  frame.cpp  section.cpp
